Endpoint que agrega curps a la base de datos
