# app/Models/Curp.php
@@ -8,5 +8,8 @@ use Illuminate\Database\Eloquent\Model;
 class Curp extends Model
 {
     use HasFactory;
-    
+    protected $fillable = [
+        'nombre','apellido_p','apellido_m','fecha_nacimiento','sexo','estado','curp', 
+    ];
+
 }
