# routes/web.php
@@ -19,3 +19,4 @@ Route::get('/', function () {
 });
 
 Route::get('/api/getAllCURPS',[CurpController::class,"index"]);
+Route::post('/api/createCurp',[CurpController::class,"create"]);
