# storage/api-docs/api-docs.json
@@ -18,6 +18,64 @@
                     }
                 }
             }
+        },
+        "/api/createCurp": {
+            "post": {
+                "summary": "Agrega Crups",
+                "operationId": "cd821b3c92eb2911f7d8b027468ab850",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "nombre": {
+                                        "type": "string"
+                                    },
+                                    "apellido_p": {
+                                        "type": "string"
+                                    },
+                                    "apellido_m": {
+                                        "type": "string"
+                                    },
+                                    "fecha_nacimiento": {
+                                        "type": "string"
+                                    },
+                                    "sexo": {
+                                        "type": "string"
+                                    },
+                                    "estado": {
+                                        "type": "string"
+                                    },
+                                    "curp": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "nombre": "Bryan Eliut",
+                                    "apellido_p": "Hernandez",
+                                    "apellido_m": "Moran",
+                                    "fecha_nacimiento": "1997-09-04",
+                                    "sexo": "H",
+                                    "estado": "HG",
+                                    "curp": "HEMB970904HHGRRR00"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "El Curp se agrego con exito."
+                    },
+                    "406": {
+                        "description": "El request es invalido"
+                    },
+                    "500": {
+                        "description": "Ha ocurrido un error."
+                    }
+                }
+            }
         }
     }
 }
